[package]
name = "htc"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.2"

[dependencies.rand]
default-features = false
features = ["small_rng"]
version = "0.7.2"

[dependencies.stm32g0]
version = "0.6.0"
features = ["stm32g0x0", "rt"]
