[package]
name = "htc"
version = "0.1.0"
authors = ["Nerijus Arlauskas <nercury@gmail.com>"]
edition = "2018"

[dependencies]
panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
cortex-m = "0.6.1"
cortex-m-rt = "0.6.10"
cortex-m-rtfm = "0.5.0"

[dependencies.rand]
default-features = false
features = ["small_rng"]
version = "0.7.2"

[dependencies.stm32g0xx-hal]
default-features = false
features = ["rt", "stm32g030"]
version = "0.0.7"

[profile.release]
lto = true